2005-04-19  Brian Wellington <bwelling@xbill.org>
	* configure.ac, Makefile.am, editor: Add gnocatan-editor.

2005-04-18  Brian Wellington <bwelling@xbill.org>
	* client/gtk/plenty.c: Remove duplicated and deprecated code
	by using the resource table widget.
	* server/gnocatan-server-console.c, server/player.c,
	server/server.c, server/server.h, server/gtk/gnocatan-server-gtk.c:
	Add the ability to disable AI chatting from gnocatan-server-gtk.
	* client/gtk/polygon.[ch], client/gtk/theme.[ch],
	client/gtk/Makefile.am, common/gtk/polygon.[ch],
	common/gtk/theme.[ch], common/gtk/Makefile.am: Move theme and polygon
	code from client/gtk to common/gtk.
	* client/ai/greedy.c: The AI can now play monopoly cards.

2005-04-17  Stephen Jacob <sj@sjacob.org>
	* client/callback.h, client/ai/greedy.c, client/common/callback.c,
	client/common/player.c, client/gtk/player.c: The AI now holds VP
	dev cards until it has enough points to win.

2005-04-14  Brian Wellington <bwelling@xbill.org>
	* common/game.c, server/pregame.c: Make params_write_file() create a
	valid game file.

2004-04-14  0.9.8  Roland Clobus <rclobus@bigfoot.com>
	* server/server.c (accept_connection): Used wrong file descriptor, bug
	was introduced in 0.9.6
	* common/game.c (params_copy), common/map.c (disconnect_hex),
	server/square.game: Fixed the core dump which resulted in the
	imcomplete file. Added some descriptions of the errors.
	* client/ai/greedy.c (greedy_turn): Fix for bug introduced in 0.9.6.
	* client/ai/greedy.c (trade_desired, greedy_consider_quote): Let the
	AI accept free offers during trade.
	* common/map.c (layout_chits): Use at most one robber per map.
	* common/map.c (map_copy): Use robber and pirate hex from the copied
	map, not the original map.
	* configure.ac: Do not use Gtk+ for console-only applications.

2005-04-09  0.9.7  Daniel <dgun@umpire.com>
	* server/gnocatan-server.c: When duplicate game titles exist, a number
	is added to the title.

2005-04-09  Yusei <yusei@ragondux.com>