@@ -40,6 +40,7 @@ debug_includes = \
 	-Wnested-externs \
 	-ggdb3 \
 	-O \
+	-DG_DISABLE_DEPRECATED \
 	-DGDK_DISABLE_DEPRECATED \
 	-DGTK_DISABLE_DEPRECATED \
 	-DGNOME_DISABLE_DEPRECATED \
